saving updates to standardize dependencies' versions