@@ -2,12 +2,8 @@ plugins {
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'java'
+    id 'application'
 }
-
-group = 'com.akilisha.oss.roya.bench.spring'
-version = '0.0.1-SNAPSHOT'
-
-repositories { mavenCentral() }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -24,3 +20,6 @@ tasks.withType(Test) {
     jvmArgs += ['--enable-preview']
 }
 
+tasks.named('run') {
+    jvmArgs += ['--enable-preview']
+}
